<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:orientation="vertical">
        <RadioButton android:id="@+id/genre_self_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_help" />
        <RadioButton android:id="@+id/genre_historical_fantasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historical_fantasy" />
        <RadioButton android:id="@+id/genre_cs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_science" />
        <RadioButton android:id="@+id/genre_historical_Fiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/historical_fiction" />
    </RadioGroup>


</LinearLayout>