<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <EditText
        android:id="@+id/c_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_of_book" />
    <EditText
        android:id="@+id/c_author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_s_name" />
    <EditText
        android:id="@+id/c_genre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/genre_of_book" />

</LinearLayout>