<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#3A3A3A"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_new_account"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/new_account" />

    <Button
        android:id="@+id/btn_place_hold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:text="@string/place_hold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="bottom|center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_manage_system"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/manage_system" />
    </LinearLayout>


</LinearLayout>